update to fix help registration dashboard not loading

--- a/src/plonestatic/euphorie/resources/assets/oira/help/en/pages/1-registration.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/en/pages/1-registration.html
@@ -212,12 +212,13 @@
 <p>Once you are logged in, you will see the screen below. From here you can start a new risk assessment or return to risk assessments you have started previously.</p>
 
 <figure class="screenshot">
-  <object class="pat-auto-scale" data="/++resource++euphorie.resources/assets/oira/help/en/illustrations/index-logged-in.html" scrolling="no">
+  <object class="pat-auto-scale" data="/++resource++euphorie.resources/assets/oira/help/en/illustrations/dashboard.html" scrolling="no">
   </object>
   <figcaption>The dashboard.</figcaption>
 </figure>
 
-<p>Start a new risk assessment by giving it a title (e.g. My-Company 2018-07-03) or access one of your previous risk assessments. All your risk assessments are saved for future reference unless you choose to delete them.</p>
+<p>Start a new risk assessment by giving it a title (e.g. My-Company 2018-07-03) or access one of your previous risk assessments. All your risk assessments are saved for future reference unless you choose to delete them.
+Veell V</p>
 
 			</div>
 		</article>
