--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/2014-01-02-work-environment-site-related.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/2014-01-02-work-environment-site-related.html
@@ -867,7 +867,7 @@
             
             
             <!-- <a 
-                class="default pat-button">Keur RI&E goed</a>  --> 
+                class="default pat-button"></a>  --> 
         </div>
     </div>
 </div>
