--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/index-logged-in.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/index-logged-in.html
@@ -183,7 +183,7 @@
     <a 
         href="/tools/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
-        class=" pat-inject">Instrumenten</a>
+        class=" pat-inject">Tools</a>
     <a 
         href="/assessments/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
