--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/portlet-so-and-so.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/portlet-so-and-so.html
@@ -375,7 +375,7 @@
             
             
             <!-- <a 
-                class="default pat-button">Keur RI&E goed</a>  --> 
+                class="default pat-button"></a>  --> 
         </div>
     </div>
 </div>
