--- a/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/2014-01-02-work-environment-site-related.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/2014-01-02-work-environment-site-related.html
@@ -867,7 +867,7 @@
             
             
             <!-- <a 
-                class="default pat-button">Approve risk assessment</a>  --> 
+                class="default pat-button"></a>  --> 
         </div>
     </div>
 </div>
