--- a/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/consultancy-validated.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/consultancy-validated.html
@@ -378,7 +378,7 @@
             
             
             <!-- <a 
-                class="default pat-button">Approve risk assessment</a>  --> 
+                class="default pat-button"></a>  --> 
         </div>
     </div>
 </div>
