--- a/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/status-certificate.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/en/illustrations/status-certificate.html
@@ -370,7 +370,7 @@
             
             
             <!-- <a 
-                class="default pat-button">Approve risk assessment</a>  --> 
+                class="default pat-button"></a>  --> 
         </div>
     </div>
 </div>
