--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/certificate-public.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/certificate-public.html
@@ -183,7 +183,7 @@
         <p 
             class="certificate-user-name"></p>
         <p 
-            class="certificate-achievement">Voor het uitvoeren van een risicobeoordeling met het hulpmiddel <strong class="certificate-tool-name">“Transport routier”</strong> op <time class="certificate-date">7 september 2019</time>.</p>
+            class="certificate-achievement">Voor het uitvoeren van een risicobeoordeling met de tool <strong class="certificate-tool-name">“Transport routier”</strong> op <time class="certificate-date">7 september 2019</time>.</p>
     
 </article>
 					</a>
