--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/index-logged-in-lazy-load.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/index-logged-in-lazy-load.html
@@ -183,7 +183,7 @@
     <a 
         href="/tools/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
-        class=" pat-inject">Instrumenten</a>
+        class=" pat-inject">Tools</a>
     <a 
         href="/assessments/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
@@ -1031,7 +1031,7 @@
             <header 
                 class="portlet-title-group">
                 <h2 
-                    class="portlet-title">Ontgrendelde risicobeoordelingen</h2>
+                    class="portlet-title">Ontgrendelde RI&Eʼs</h2>
             </header>
         </article>
         <div 
@@ -1155,7 +1155,7 @@
             <header 
                 class="portlet-title-group">
                 <h2 
-                    class="portlet-title">Instrumenten</h2>
+                    class="portlet-title">Tools</h2>
             </header>
         </article>
         <div 
@@ -1362,7 +1362,7 @@
         <p 
             class="certificate-user-name"></p>
         <p 
-            class="certificate-achievement">Voor het uitvoeren van een risicobeoordeling met het hulpmiddel <strong class="certificate-tool-name">“Gas stoves”</strong> op <time class="certificate-date">7 september 2019</time>.</p>
+            class="certificate-achievement">Voor het uitvoeren van een risicobeoordeling met de tool <strong class="certificate-tool-name">“Gas stoves”</strong> op <time class="certificate-date">7 september 2019</time>.</p>
     
 </article>
                     </a>
