--- a/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/tools.html
+++ b/src/plonestatic/euphorie/resources/assets/oira/help/nl/illustrations/tools.html
@@ -236,7 +236,7 @@
     <a 
         href="/tools/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
-        class="current pat-inject">Instrumenten</a>
+        class="current pat-inject">Tools</a>
     <a 
         href="/assessments/"
         data-pat-inject="history: record; source: #application-content; target: #application-content && source: #toolbar-functions-area::element; target: #toolbar-functions-area::element"
